--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies and test the Streamlit application
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Streamlit Application Test
 
 on:
   push:
@@ -14,26 +14,28 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.12"
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install streamlit
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
+    
+    - name: Test Streamlit app syntax
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+        # Check if the Streamlit app has valid Python syntax
+        python -m py_compile *.py
+    
+    - name: Test Streamlit app runs
       run: |
-        pytest
+        # Start Streamlit in headless mode and check if it runs without errors
+        timeout 30s streamlit run streamlit_app.py --server.headless=true --server.port=8501 || code=$?; if [ $code -eq 124 ]; then echo "Streamlit app started successfully"; exit 0; else exit $code; fi
